# research_playground

hubble_constant_mass_correction/: README.md  model_results.md  models.py  notebook.ipynb  playground.py  pyproject.toml  run.py
hubble_constant_mass_correction/data/: dataloader.py
hubble_constant_mass_correction/data/jla/: jla.csv
hubble_constant_mass_correction/data/prospector/: .gitignore  prospector.csv
hubble_constant_mass_correction/data/zpeg/: JLA_SDSSphot_A_nodustcorr_ZPEG_10_rev1.csv  JLA_SDSSphot_A_nodustcorr_ZPEG_11_rev1.csv  JLA_SDSSphot_A_nodustcorr_ZPEG_1_rev1.csv  JLA_SDSSphot_A_nodustcorr_ZPEG_4_rev1.csv  JLA_SDSSphot_A_nodustcorr_ZPEG_6_rev1.csv  JLA_SDSSphot_A_nodustcorr_ZPEG_7_rev1.csv  JLA_SDSSphot_A_nodustcorr_ZPEG_8_rev1.csv  zpeg_12.csv  zpeg_13.csv  zpeg_14.csv  zpeg_15.csv  zpeg_16.csv  zpeg_2.csv  zpeg_3.csv  zpeg_5.csv  zpeg_9.csv
hubble_constant_mass_correction/models/: distmod_cosmology.py  distmod_tripp.py  hubble_residual.py  mass_corrections.py  model.py  pymc3_models.py
hubble_constant_mass_correction/models/helpers/: results.py
