[tool.poetry]
name = "hubble_constant_mass_correction"
version = "0.1.0"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
astropy = "^4.2.1"
seaborn = "^0.11.1"
tqdm = "^4.61.1"
pymc3 = "^3.11.2"
ipykernel = "^6.0.0"
arviz = "^0.11.2"
jupyterlab = "^3.0.16"
corner = "^2.2.1"
emcee = "^3.1.0"
ipywidgets = "^7.6.3"
h5py = "^3.3.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
